recursion.logo.koch.Koch.scala.error
Compilation error:
Koch:12: error: reassignment to val
    if(levels=0){
             ^